--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,3 +2,114 @@
 Código Hexadecimal verde: #8EC641
 Código Hexadecimal gris footer: #3B3B3B
 */
+*{
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	font-family: 'Raleway';
+	font-size: 16px;
+}
+
+/*sección bienvenida*/
+
+#bienvenida{
+	background: url('../img/fondo-bienvenida.jpg');
+	background-size: cover;
+	background-position: center;
+	padding: 50px 0;
+}
+
+.logo{
+	text-align: left;
+	padding: 0 30px;
+}
+
+.mensaje{
+	text-align: center;
+}
+
+/*secciones de fondo de color*/
+.color{
+	background-color: #8EC641;
+}
+
+/*newsletter*/
+.newsletter{
+	text-align: center;
+	padding: 50px;
+}
+
+.newsletter button{
+	color: white;
+	background-color: #8EC641;
+	padding: 20px;
+	border: 5px solid white;
+	border-radius: 5px;
+	font-size: 1.5rem;
+	font-weight: bolder;
+	cursor: pointer;
+}
+
+/*sección about*/
+#about{
+	background: url('../img/fondo-about.jpg');
+	background-size: cover;
+	background-position: center;
+	padding: 50px 0;
+}
+
+.contenido{
+	color: white;
+	width: 40%;
+	margin: 0 auto;
+	padding: 30px 30px 100px 30px;
+}
+
+.contenido h1{
+	font-weight: bolder;
+	font-size: 5rem;
+	line-height: 5rem;
+	text-transform: uppercase;
+}
+ /*tipos de té*/
+ .te-diferentes{
+ 	color: white;
+ 	padding: 30px;
+ 	width: 60%;
+ 	margin: 0 auto;
+ }
+
+ .tipo-de-te{
+ 	border: 5px solid white;
+ 	margin: 30px 0;
+ 	padding: 20px;
+ }
+
+ .tipo-de-te h2{
+ 	font-size: 1.5rem;
+ }
+
+ /*disfruta*/
+ #disfruta{
+ 	background: url('../img/disfruta.jpg');
+ 	background-size: cover;
+ 	background-position: center;
+ 	padding: 50px 0;
+ }
+
+ /*Footer*/
+ footer{
+ 	background-color: #3B3B3B;
+ 	padding: 20px 30px;
+ 	color: white;
+ }
+
+ .news{
+ 	background-color: #8EC641;
+ 	width: 100%;
+ 	height: 400px;
+}
+
+.news form input{
+	border-radius: 5px;
+}
